bundles/mesh/inc/gap.h

typedef struct le_connection_parameter_range{
    uint16_t le_conn_interval_min;
    uint16_t le_conn_interval_max;
    uint16_t le_conn_latency_min;
    uint16_t le_conn_latency_max;
    uint16_t le_supervision_timeout_min;
    uint16_t le_supervision_timeout_max;
} le_connection_parameter_range_t;
/**
 * @brief Request that the Controller enables or disables capturing IQ samples from the
 *          Constant Tone Extension of periodic advertising packets in the periodic
 *          advertising train identified by the Sync_Handle parameter.
 *
 * @param sync_handle           identifying the periodic advertising train.
 * @param sampling_enable       Disable (0x00), Enable (0x01)
 * @param slot_durations        combination of bits representing cte_slot_duration_type_t
 * @param max_sampled_ctes      The maximum number of Constant Tone Extensions to sample and
 *                              report in each periodic advertising interval.
 *                              Range: 0x01 to 0x10. 0x00: sample and report all CTEs.
 * @param switching_pattern_len The number of Antenna IDs in the pattern. Range: 0x02 to 0x4B.
 * @param antenna_ids           List of Antenna IDs in the pattern
 *
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
// uint8_t gap_set_connectionless_iq_sampling_enable(const uint16_t      sync_handle,
//                                                   const uint8_t       sampling_enable,
//                                                   const uint8_t       slot_durations,
//                                                   const uint8_t       max_sampled_ctes,
//                                                   const uint8_t       switching_pattern_len,
//                                                   const uint8_t      *antenna_ids);
// WARNING: ^^^ this API is not available in this release


/**
 * @brief Enable or disable sampling received Constant Tone Extension fields on the
 *          connection identified by the Connection_Handle parameter and to set the
 *          antenna switching pattern and switching and sampling slot durations to be
 *          used.
 *
 * @param conn_handle           Connection handle
 * @param sampling_enable       Disable (0x00), Enable (0x01)
 * @param slot_durations        combination of bits representing cte_slot_duration_type_t
 * @param switching_pattern_len The number of Antenna IDs in the pattern. Range: 0x02 to 0x4B.
 * @param antenna_ids           List of Antenna IDs in the pattern
 * @return                      0: Message is sent out; Other: Message is not sent out
 *
 */
// uint8_t gap_set_connection_cte_rx_param(const hci_con_handle_t  conn_handle,
//                                         const uint8_t           sampling_enable,
//                                         const uint8_t           slot_durations,
//                                         const uint8_t           switching_pattern_len,
//                                         const uint8_t          *antenna_ids);
// WARNING: ^^^ this API is not available in this release


/**
 * @brief Set the antenna switching pattern and permitted Constant Tone Extension
 *          types used for transmitting Constant Tone Extensions requested by the peer
 *          device on the connection identified by the Connection_Handle parameter.
 *
 * @param conn_handle           Connection handle
 * @param cte_types             Combination of bits representing cte_type_t
 * @param switching_pattern_len The number of Antenna IDs in the pattern. Range: 0x02 to 0x4B.
 * @param antenna_ids           List of Antenna IDs in the pattern
 * @return                      0: Message is sent out; Other: Message is not sent out
 *
 */
// uint8_t gap_set_connection_cte_tx_param(const hci_con_handle_t  conn_handle,
//                                         const uint8_t           cte_types,
//                                         const uint8_t           switching_pattern_len,
//                                         const uint8_t          *antenna_ids);
// WARNING: ^^^ this API is not available in this release



/**
 * @brief Set the antenna switching pattern and permitted Constant Tone Extension
 *          types used for transmitting Constant Tone Extensions requested by the peer
 *          device on the connection identified by the Connection_Handle parameter.
 *
 * @param conn_handle           Connection handle
 * @param enable                Disable (0x00), Enable (0x01)
 * @param requested_interval    0x0000: Initiate the Constant Tone Extension Request procedure once, at the
 *                                     earliest practical opportunity
 *                              0x0001 to 0xFFFF:
 *                                  Requested interval for initiating the Constant Tone Extension Request
 *                                  procedure in number of connection events.
 * @param requested_cte_length  Minimum length of the Constant Tone Extension being requested in 8
 *                              ¦Ìs units. Range: 0x02 to 0x14.
 * @param requested_cte_type    Requested CTE type
 * @return                      0: Message is sent out; Other: Message is not sent out
 *
 */
// uint8_t gap_set_connection_cte_request_enable(const hci_con_handle_t  conn_handle,
//                                               const uint8_t           enable,
//                                               const uint16_t          requested_cte_interval,
//                                               const uint8_t           requested_cte_length,
//                                               const cte_type_t        requested_cte_type);
// WARNING: ^^^ this API is not available in this release



/**
 * @brief Request the Controller to respond to LL_CTE_REQ PDUs with LL_CTE_RSP
 *          PDUs on the specified connection.
 *
 * @param conn_handle           Connection handle
 * @param enable                Disable (0x00), Enable (0x01)
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
// uint8_t gap_set_connection_cte_response_enable(const hci_con_handle_t  conn_handle,
//                                                const uint8_t           enable);
// WARNING: ^^^ this API is not available in this release

/**
 * @brief Read the switching rates, the sampling rates, the number of antennae, and the
 *          maximum length of a transmitted Constant Tone Extension supported by the
 *          Controller.
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
// uint8_t gap_read_antenna_info(void);
// WARNING: ^^^ this API is not available in this release


/**
 * @brief Enable or disable reports for the periodic advertising train identified by the
 *          Sync_Handle parameter.
 *
 * @param sync_handle           identifying the periodic advertising train.
 * @param enable                Disable (0x00), Enable (0x01)
 *
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
// uint8_t gap_set_periodic_adv_rx_enable(const uint16_t       sync_handle,
//                                        const uint8_t        enable);
// WARNING: ^^^ this API is not available in this release


/**
 * @brief Instruct the Controller to send synchronization information about the periodic
 *          advertising train identified by the Sync_Handle parameter to a connected
 *          device.
 *
 * @param conn_handle           Connection handle
 * @param service_data          A value provided by the app for use by the app of the peer device.
 *                              It is not used by the host or controller.
 * @param sync_handle           identifying the periodic advertising train.
 *
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
// uint8_t gap_periodic_adv_sync_transfer(const hci_con_handle_t   conn_handle,
//                                        const uint16_t           service_data,
//                                        const uint16_t           sync_handle);
// WARNING: ^^^ this API is not available in this release


/**
 * @brief Instruct the Controller to send synchronization information about the periodic
 *          advertising in an advertising set to a connected device.
 *
 * @param conn_handle           Connection handle
 * @param service_data          A value provided by the app for use by the app of the peer device.
 *                              It is not used by the host or controller.
 * @param adv_handle            identifying the advertising set.
 *
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
// uint8_t gap_periodic_adv_set_info_transfer(const hci_con_handle_t   conn_handle,
//                                            const uint16_t           service_data,
//                                            const uint8_t            adv_handle);
// WARNING: ^^^ this API is not available in this release



typedef enum
{
    PERIODIC_TRANS_MODE_NULL,
    PERIODIC_TRANS_MODE_SEND_EVT_DISABLE_REPORT,
    PERIODIC_TRANS_MODE_SEND_EVT_ENABLE_REPORT
} periodic_adv_sync_transfer_mode_t;
/**
 * @brief Specify how the Controller will process periodic advertising
 *          synchronization information received from the device identified by the
 *          Connection_Handle parameter (the "transfer mode")
 *
 * @param conn_handle           Connection handle
 * @param mode                  The action to be taken when periodic advertising
 *                              synchronization information is received.
 * @param skip                  Number of consecutive periodic advertising
 *                              packets that the receiver may skip after successfully receiving a periodic
 *                              advertising packet.
 *                              Range: 0x0000 to 0x01F3
 * @param sync_timeout          maximum permitted time between successful receives. If this time is exceeded, synchronization is lost.
 *                              Range: 0x000A to 0x4000. Time = N*10 ms
 * @param cte_excl_types        whether to only synchronize to periodic advertising with certain types of Constant Tone Extension.
 *                              Combination of SYNC_EXCL_XXX
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
// uint8_t gap_periodic_adv_sync_transfer_param(const hci_con_handle_t                     conn_handle,
//                                              const periodic_adv_sync_transfer_mode_t    mode,
//                                              const uint16_t                             skip,
//                                              const uint16_t                             sync_timeout,
//                                              const uint8_t                              cte_excl_types);
// WARNING: ^^^ this API is not available in this release


/**
 * @brief Specify the initial value for the mode, skip, timeout, and
 *          Constant Tone Extension type (set by the
 *          HCI_LE_Set_Periodic_Advertising_Sync_Transfer_Parameters command;
 *          see Section 7.8.91) to be used for all subsequent connections over the LE
 *          transport.
 *
 * @param mode                  The action to be taken when periodic advertising
 *                              synchronization information is received.
 * @param skip                  Number of consecutive periodic advertising
 *                              packets that the receiver may skip after successfully receiving a periodic
 *                              advertising packet.
 *                              Range: 0x0000 to 0x01F3
 * @param sync_timeout          maximum permitted time between successful receives. If this time is exceeded, synchronization is lost.
 *                              Range: 0x000A to 0x4000. Time = N*10 ms
 * @param cte_excl_types        whether to only synchronize to periodic advertising with certain types of Constant Tone Extension.
 *                              Combination of SYNC_EXCL_XXX
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
// uint8_t gap_default_periodic_adv_sync_transfer_param(
//                                              const periodic_adv_sync_transfer_mode_t    mode,
//                                              const uint16_t                             skip,
//                                              const uint16_t                             sync_timeout,
//                                              const uint8_t                              cte_excl_types);
// WARNING: ^^^ this API is not available in this release


uint8_t gap_set_host_channel_classification(const uint32_t channel_low, const uint8_t channel_high);
/**
 * @brief Sets update period for random address
 * @param period_ms in ms
 */
// void gap_random_address_set_update_period(int period_ms);
// WARNING: ^^^ this API is not available in this release


/**
 * @brief Updates the connection parameters for a given LE connection
 * @param handle
 * @param conn_interval_min (unit: 1.25ms)
 * @param conn_interval_max (unit: 1.25ms)
 * @param conn_latency
 * @param supervision_timeout (unit: 10ms)
 * @returns 0 if ok
 */
int gap_update_connection_parameters(hci_con_handle_t con_handle, uint16_t conn_interval_min,
    uint16_t conn_interval_max, uint16_t conn_latency, uint16_t supervision_timeout,
    uint16_t min_ce_len, uint16_t max_ce_len);
/**
 * @brief Set accepted connection parameter range
 * @param range
 */
void gap_get_connection_parameter_range(le_connection_parameter_range_t * range);
/**
 * @brief Get accepted connection parameter range
 * @param range
 */
void gap_set_connection_parameter_range(le_connection_parameter_range_t * range);
/**
 * @brief Encrypt the Plaintext_Data in the command using the Key given in the command and
 *          returns the Encrypted_Data to the Host. The AES-128 bit block cypher is
 *          defined in NIST Publication FIPS-197.
 * @param key                   Key, 16 Octets.
 *                              0x1234.... is represented by {0x12, 0x34, ...}
 * @param plaintext             Plaintext_Data, 16 Octets
 *                              0x1234.... is represented by {0x12, 0x34, ...}
 * @return                      0: Message is sent out; Other: Message is not sent out
 */
uint8_t gap_aes_encrypt(const uint8_t *key, const uint8_t *plaintext);
#define HCI_VENDOR_CCM  0xFC01
uint8_t gap_start_ccm(
        uint8_t  type,          // 0: encrypt  1: decrypt
        uint8_t  mic_size,
        uint16_t msg_len,
        uint16_t aad_len,
        uint32_t tag,          // same value will be reported in event
        uint8_t *key,
        uint8_t *nonce,
        uint8_t *msg,
        uint8_t *aad,
        uint8_t *out_msg);
//HCI func interface

/**
 * @brief Add event packet handler.
 */
void hci_add_event_handler(btstack_packet_callback_registration_t * callback_handler);
/**
 * @brief Registers a packet handler for ACL data. Used by L2CAP
 */
void hci_register_acl_packet_handler(btstack_packet_handler_t handler);
/**
 * @brief Requests the change of BTstack power mode.
 */
int  hci_power_control(HCI_POWER_MODE mode);
/*********************************/
typedef enum {
    // No security
    // No encryption required
    // No authentication
    LEVEL_1 = 1,

    // Unauthenticated pairing with encryption
    LEVEL_2,

    // Authenticated pairing with encryption
    LEVEL_3,

    // Authenticated LE Secure Connections pairing with encryption
    LEVEL_4,
} gap_security_level_t;