bundles/typical/inc/gap.nim


## *
##  @brief Specify how the Controller will process periodic advertising
##           synchronization information received from the device identified by the
##           Connection_Handle parameter (the "transfer mode")
##
##  @param conn_handle           Connection handle
##  @param mode                  The action to be taken when periodic advertising
##                               synchronization information is received.
##  @param skip                  Number of consecutive periodic advertising
##                               packets that the receiver may skip after successfully receiving a periodic
##                               advertising packet.
##                               Range: 0x0000 to 0x01F3
##  @param sync_timeout          maximum permitted time between successful receives. If this time is exceeded, synchronization is lost.
##                               Range: 0x000A to 0x4000. Time = N*10 ms
##  @param cte_excl_types        whether to only synchronize to periodic advertising with certain types of Constant Tone Extension.
##                               Combination of SYNC_EXCL_XXX
##  @return                      0: Message is sent out; Other: Message is not sent out
##
##  uint8_t gap_periodic_adv_sync_transfer_param(const hci_con_handle_t                     conn_handle,
##                                               const periodic_adv_sync_transfer_mode_t    mode,
##                                               const uint16_t                             skip,
##                                               const uint16_t                             sync_timeout,
##                                               const uint8_t                              cte_excl_types);
##  WARNING: ^^^ this API is not available in this release
## *
##  @brief Specify the initial value for the mode, skip, timeout, and
##           Constant Tone Extension type (set by the
##           HCI_LE_Set_Periodic_Advertising_Sync_Transfer_Parameters command;
##           see Section 7.8.91) to be used for all subsequent connections over the LE
##           transport.
##
##  @param mode                  The action to be taken when periodic advertising
##                               synchronization information is received.
##  @param skip                  Number of consecutive periodic advertising
##                               packets that the receiver may skip after successfully receiving a periodic
##                               advertising packet.
##                               Range: 0x0000 to 0x01F3
##  @param sync_timeout          maximum permitted time between successful receives. If this time is exceeded, synchronization is lost.
##                               Range: 0x000A to 0x4000. Time = N*10 ms
##  @param cte_excl_types        whether to only synchronize to periodic advertising with certain types of Constant Tone Extension.
##                               Combination of SYNC_EXCL_XXX
##  @return                      0: Message is sent out; Other: Message is not sent out
##
##  uint8_t gap_default_periodic_adv_sync_transfer_param(
##                                               const periodic_adv_sync_transfer_mode_t    mode,
##                                               const uint16_t                             skip,
##                                               const uint16_t                             sync_timeout,
##                                               const uint8_t                              cte_excl_types);
##  WARNING: ^^^ this API is not available in this release

proc gap_set_host_channel_classification*(channel_low: uint32; channel_high: uint8): uint8 {.
    importc: "gap_set_host_channel_classification", header: "gap.h".}
## *
##  @brief Sets update period for random address
##  @param period_ms in ms
##
##  void gap_random_address_set_update_period(int period_ms);
##  WARNING: ^^^ this API is not available in this release
## *
##  @brief Updates the connection parameters for a given LE connection
##  @param handle
##  @param conn_interval_min (unit: 1.25ms)
##  @param conn_interval_max (unit: 1.25ms)
##  @param conn_latency
##  @param supervision_timeout (unit: 10ms)
##  @returns 0 if ok
##

proc gap_update_connection_parameters*(con_handle: hci_con_handle_t;
                                      conn_interval_min: uint16;
                                      conn_interval_max: uint16;
                                      conn_latency: uint16;
                                      supervision_timeout: uint16;
                                      min_ce_len: uint16; max_ce_len: uint16): cint {.
    importc: "gap_update_connection_parameters", header: "gap.h".}
## *
##  @brief Set accepted connection parameter range
##  @param range
##

proc gap_get_connection_parameter_range*(range: ptr le_connection_parameter_range_t) {.
    importc: "gap_get_connection_parameter_range", header: "gap.h".}
## *
##  @brief Get accepted connection parameter range
##  @param range
##

proc gap_set_connection_parameter_range*(range: ptr le_connection_parameter_range_t) {.
    importc: "gap_set_connection_parameter_range", header: "gap.h".}
## *
##  @brief Encrypt the Plaintext_Data in the command using the Key given in the command and
##           returns the Encrypted_Data to the Host. The AES-128 bit block cypher is
##           defined in NIST Publication FIPS-197.
##  @param key                   Key, 16 Octets.
##                               0x1234.... is represented by {0x12, 0x34, ...}
##  @param plaintext             Plaintext_Data, 16 Octets
##                               0x1234.... is represented by {0x12, 0x34, ...}
##  @return                      0: Message is sent out; Other: Message is not sent out
##

proc gap_aes_encrypt*(key: ptr uint8; plaintext: ptr uint8): uint8 {.
    importc: "gap_aes_encrypt", header: "gap.h".}
const
  HCI_VENDOR_CCM* = 0x0000FC01

proc gap_start_ccm*(`type`: uint8; mic_size: uint8; msg_len: uint16; aad_len: uint16;
                   tag: uint32; key: ptr uint8; nonce: ptr uint8; msg: ptr uint8;
                   aad: ptr uint8; out_msg: ptr uint8): uint8 {.
    importc: "gap_start_ccm", header: "gap.h".}
  ##  0: encrypt  1: decrypt
  ##  same value will be reported in event
## HCI func interface
## *
##  @brief Add event packet handler.
##

proc hci_add_event_handler*(callback_handler: ptr btstack_packet_callback_registration_t) {.
    importc: "hci_add_event_handler", header: "gap.h".}
## *
##  @brief Registers a packet handler for ACL data. Used by L2CAP
##

proc hci_register_acl_packet_handler*(handler: btstack_packet_handler_t) {.
    importc: "hci_register_acl_packet_handler", header: "gap.h".}
## *
##  @brief Requests the change of BTstack power mode.
##

proc hci_power_control*(mode: HCI_POWER_MODE): cint {.importc: "hci_power_control",
    header: "gap.h".}
## *******************************

type                          ##  No security
    ##  No encryption required
    ##  No authentication
  gap_security_level_t* {.size: sizeof(cint).} = enum
    LEVEL_1 = 1,                ##  Unauthenticated pairing with encryption
    LEVEL_2,                  ##  Authenticated pairing with encryption
    LEVEL_3,                  ##  Authenticated LE Secure Connections pairing with encryption
    LEVEL_4

